# echosounderapi-c

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/detect/: detect.c
examples/work/: work.c
include/: DualEchosounder.h  Echosounder.h  EchosounderCWrapper.h  EchosounderCommands.h  ISonar.h  SingleEchosounder.h
src/: DualEchosounder.cpp  Echosounder.cpp  EchosounderCWrapper.cpp  ISonar.cpp  SingleEchosounder.cpp
vs/: build64Debug.bat  build64Release.bat  echosounderapi.sln  echosounderapi.vcxproj  echosounderapi.vcxproj.filters
